--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
-RewriteEngine Off
+RewriteEngine ON
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
