--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,8 @@
 <IfModule mod_rewrite.c>
 RewriteEngine ON
 
+RewriteRule ^api/(.*) api.php [L]
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
